# tarkov-market-obs-plugin

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  INSTALLATION.md  PROJECT.md  README.md  build.rs  install_to_obs.sh  test_mock.sh  test_plugin  test_plugin.c
.github/workflows/: build-project.yaml  check-format.yaml  dispatch.yaml  push.yaml  rust-audit.yaml  rust-build.yaml  rust-lint.yaml
scripts/: install-pre-commit.sh
src/: lib.rs
src/api/: mod.rs
src/capture/: mod.rs
src/config/: mod.rs
src/detection/: mod.rs
src/overlay/: mod.rs
src/template/: mod.rs
