[package]
name = "tarkov-price-overlay"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "OBS plugin for Escape from Tarkov item price overlay"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "tarkov_price_overlay"

[dependencies]
# No dependencies needed for the mock plugin

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
