[package]
name = "tarkov-price-overlay"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "OBS plugin for Escape from Tarkov item price overlay"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "tarkov_price_overlay"

[dependencies]
libc = "0.2"
obs-sys = "0.1.0"
obs-text = "0.1.0"

[build-dependencies]
pkg-config = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
