[package]
name = "tarkov-price-overlay"
version = "0.1.0"
edition = "2021"
authors = ["Dallas Gutauckis <dallas@dallasgutauckis.com>"]
description = "OBS Studio plugin for displaying Tarkov market prices"
license = "MIT"
repository = "https://github.com/dallasgutauckis/tarkov-market-obs-plugin"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
name = "tarkov_price_overlay"

[dependencies]
libc = "0.2"
obs-sys = "0.3.0"

[build-dependencies]
pkg-config = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
